--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "mcbot",
-    "version": "1.0.4",
+    "version": "1.0.5",
     "description": "Este es el package oficial del McBot que es el bot oficial del servidor de pol mcfly(invite.gg/polmcfly)",
     "main": "index.js",
     "scripts": {
@@ -13,11 +13,8 @@
     "keywords": [
         "Mcbot",
         "mcbot",
-        "pol",
-        "mcfly",
-        "pol",
-        "mcfly",
-        "discord",
+        "pol mcfly",
+        "pol mcfly discord",
         "mrlol",
         "bot"
     ],
