--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "mcbot",
-    "version": "1.1.0",
+    "version": "1.1.1",
     "description": "Este es el package oficial del McBot que es el bot oficial del servidor de pol mcfly(invite.gg/polmcfly)",
     "main": "index.js",
     "scripts": {
@@ -28,6 +28,7 @@
         "better-sqlite3": "^7.1.1",
         "bindings": "^1.5.0",
         "discord.js": "^12.5.0",
+        "path": "^0.12.7",
         "prebuild-install": "^6.0.0",
         "quick.db": "^7.1.3",
         "tar": "^6.0.5"
