--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "mcbot",
-    "version": "1.1.1",
+    "version": "1.1.5",
     "description": "Este es el package oficial del McBot que es el bot oficial del servidor de pol mcfly(invite.gg/polmcfly)",
     "main": "index.js",
     "scripts": {
@@ -25,6 +25,7 @@
     },
     "homepage": "https://github.com/Mrlolpro/Mcbot#readme",
     "dependencies": {
+        "ascii-table": "0.0.9",
         "better-sqlite3": "^7.1.1",
         "bindings": "^1.5.0",
         "discord.js": "^12.5.0",
